--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-/* fonts part  */
-
-/* Work Sans fonts here */
+/* Work Sans font added here */
 
 *{
     font-family: "Work Sans", sans-serif;
