--- a/Styles/index.css
+++ b/Styles/index.css
@@ -75,4 +75,26 @@ header{
     padding: 15px 20px;
     border: none;
     border-radius: 7px;
+    margin: 20px 0px;
+}
+.banner-img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+/* Responsive section Design */
+
+/* for mobile device code */
+@media screen and (max-width: 576px) {
+
+    header{
+        padding: 0px 20px;
+    }
+    /* nav section  */
+    .navbar{
+        flex-direction: column;
+    }
+    .navbar ul li{
+        margin-right: 20px;
+    }
 }
