--- a/Styles/index.css
+++ b/Styles/index.css
@@ -75,11 +75,11 @@ header{
     padding: 15px 20px;
     border: none;
     border-radius: 7px;
-    margin: 20px 0px;
+    margin: 20px 0px 30px 0px;
 }
 .banner-img{
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 /* Responsive section Design */
