--- a/Styles/index.css
+++ b/Styles/index.css
@@ -21,6 +21,9 @@ body{
 .p-btn-clr{
     background-color: rgba(255, 144, 14, 1);
 }
+main{
+    max-width: 1400px;
+}
 /* Navbar Design here  */
 
 
@@ -80,6 +83,24 @@ header{
 .banner-img{
     width: 100%;
     margin-bottom: 40px;
+}
+
+/* Feature section Design here  */
+.fetures-section{
+    display: flex;
+    padding: 0px 250px;
+    align-items: center;
+}
+.feature-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+.feature-img img{
+    width: 100%;
+}
+.feture-details{
+    margin: 0px 20px;
 }
 
 /* Responsive section Design */
