--- a/Styles/index.css
+++ b/Styles/index.css
@@ -140,4 +140,25 @@ header{
     .navbar ul li{
         margin-right: 20px;
     }
+    .feature-img-container{
+        grid-template-columns: 1fr;
+    }
+    .fetures-container{
+        flex-direction: column-reverse;
+    }
+    .feture-details{
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 0px 20px;
+    }
+    .fetures-container{
+        flex-direction: column-reverse;
+    }
+    .feture-details{
+        text-align: center;
+    }
 }
